# mangabot

./: .pre-commit-config.yaml  README.md  database.py  main.py  main.sh  pyproject.toml
tests/: conftest.py  test_database.py  test_main.py
